# 3d-forest

./: .gitignore  CMakeLists.txt  INSTALL  README.md  installer.iss
examples/: CMakeLists.txt
examples/3dforest/project1/: box.idx  box.las  grid.idx  grid.las  project.json
examples/core/: exampleColorPalette.cpp  exampleLasCreate.cpp  exampleVector3.cpp
examples/editor/: exampleeditor.cpp
examples/src/: examplecolorpalette.cpp  exampleeditor.cpp  examplelascreate.cpp
modules/3dforest/: CMakeLists.txt
modules/3dforest/resources/: 3dforest.qrc
modules/applications/console/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/visualization/: CMakeLists.txt
src/apps/3dforest/: 3dforest.cpp  CMakeLists.txt
src/apps/tests/: CMakeLists.txt  tests.cpp
src/gui/: CMakeLists.txt  ColorSwitchWidget.cpp  ColorSwitchWidget.hpp  DoubleRangeSliderWidget.cpp  DoubleRangeSliderWidget.hpp  DoubleSliderWidget.cpp  DoubleSliderWidget.hpp  ExportGui.hpp  FindVisibleObjects.cpp  FindVisibleObjects.hpp  GuiIconTheme.hpp  GuiMainWindow.cpp  GuiMainWindow.hpp  GuiPlugin.hpp  GuiPluginInterface.hpp  GuiUtil.hpp  GuiWindow.cpp  GuiWindow.hpp  GuiWindowMain.cpp  GuiWindowMain.hpp  IconTheme.hpp  ImportFileInterface.hpp  InfoDialog.cpp  InfoDialog.hpp  InputComboBoxDialog.cpp  InputComboBoxDialog.hpp  MainWindow.cpp  MainWindow.hpp  PluginInterface.hpp  ProgressDialog.cpp  ProgressDialog.hpp  ProjectFileInterface.hpp  RangeSliderWidget.cpp  RangeSliderWidget.hpp  ShowDetailsWidget.cpp  ShowDetailsWidget.hpp  SliderWidget.cpp  SliderWidget.hpp  ThemeIcon.hpp  ToolTabWidget.cpp  (+3 more)
src/gui/resources/: resources.qrc
src/plugins/: CMakeLists.txt
src/plugins/ApplicationSettings/: ApplicationSettingsPlugin.cpp  ApplicationSettingsPlugin.hpp  ApplicationSettingsWidget.cpp  ApplicationSettingsWidget.hpp  ApplicationSettingsWindow.cpp  ApplicationSettingsWindow.hpp  CMakeLists.txt
src/plugins/ComputeClassification/: CMakeLists.txt  ComputeClassificationAction.cpp  ComputeClassificationAction.hpp  ComputeClassificationParameters.hpp  ComputeClassificationPlugin.cpp  ComputeClassificationPlugin.hpp  ComputeClassificationWidget.cpp  ComputeClassificationWidget.hpp  ComputeClassificationWindow.cpp  ComputeClassificationWindow.hpp
src/plugins/ComputeConvexHull/: CMakeLists.txt  ComputeConvexHullAction.cpp  ComputeConvexHullAction.hpp  ComputeConvexHullBasicMethod.cpp  ComputeConvexHullBasicMethod.hpp  ComputeConvexHullData.hpp  ComputeConvexHullMethod.cpp  ComputeConvexHullMethod.hpp  ComputeConvexHullParameters.hpp  ComputeConvexHullPlugin.cpp  ComputeConvexHullPlugin.hpp  ComputeConvexHullWidget.cpp  ComputeConvexHullWidget.hpp  ComputeConvexHullWindow.cpp  ComputeConvexHullWindow.hpp
src/plugins/ComputeCrownVolume/: CMakeLists.txt  ComputeCrownVolumeAction.cpp  ComputeCrownVolumeAction.hpp  ComputeCrownVolumeData.hpp  ComputeCrownVolumeParameters.hpp  ComputeCrownVolumePlugin.cpp  ComputeCrownVolumePlugin.hpp  ComputeCrownVolumeWidget.cpp  ComputeCrownVolumeWidget.hpp  ComputeCrownVolumeWindow.cpp  ComputeCrownVolumeWindow.hpp
src/plugins/ComputeDescriptor/: CMakeLists.txt  ComputeDescriptorAction.cpp  ComputeDescriptorAction.hpp  ComputeDescriptorParameters.hpp  ComputeDescriptorPca.cpp  ComputeDescriptorPca.hpp  ComputeDescriptorPlugin.cpp  ComputeDescriptorPlugin.hpp  ComputeDescriptorWidget.cpp  ComputeDescriptorWidget.hpp  ComputeDescriptorWindow.cpp  ComputeDescriptorWindow.hpp
src/plugins/ComputeElevation/: CMakeLists.txt  ComputeElevationAction.cpp  ComputeElevationAction.hpp  ComputeElevationPlugin.cpp  ComputeElevationPlugin.hpp  ComputeElevationWidget.cpp  ComputeElevationWidget.hpp  ComputeElevationWindow.cpp  ComputeElevationWindow.hpp
src/plugins/ComputeHeightMap/: ComputeHeightMapModifier.cpp  ComputeHeightMapPlugin.cpp  ComputeHeightMapWidget.cpp  ComputeHeightMapWindow.cpp
src/plugins/ComputeHeightmap/: CMakeLists.txt  ComputeHeightMapPlugin.hpp  ComputeHeightMapWidget.hpp  ComputeHeightMapWindow.hpp
src/plugins/ComputeHeightmap_tmp/: ComputeHeightMapModifier.hpp  ComputeHeightMapWindow.cpp
src/plugins/ComputeHull/: CMakeLists.txt  ComputeHullAction.cpp  ComputeHullAction.hpp  ComputeHullData.hpp  ComputeHullMethod.cpp  ComputeHullMethod.hpp  ComputeHullParameters.hpp  ComputeHullPlugin.cpp  ComputeHullPlugin.hpp  ComputeHullWidget.cpp  ComputeHullWidget.hpp  ComputeHullWindow.cpp  ComputeHullWindow.hpp
src/plugins/ComputeSegmentationNN/: CMakeLists.txt  ComputeSegmentationNNAction.cpp  ComputeSegmentationNNAction.hpp  ComputeSegmentationNNParameters.hpp  ComputeSegmentationNNPlugin.cpp  ComputeSegmentationNNPlugin.hpp  ComputeSegmentationNNWidget.cpp  ComputeSegmentationNNWidget.hpp  ComputeSegmentationNNWindow.cpp  ComputeSegmentationNNWindow.hpp
src/plugins/ComputeSkeleton/: CMakeLists.txt  ComputeSkeletonAction.cpp  ComputeSkeletonAction.hpp  ComputeSkeletonData.hpp  ComputeSkeletonMethod.cpp  ComputeSkeletonMethod.hpp  ComputeSkeletonParameters.hpp  ComputeSkeletonPlugin.cpp  ComputeSkeletonPlugin.hpp  ComputeSkeletonWidget.cpp  ComputeSkeletonWidget.hpp  ComputeSkeletonWindow.cpp  ComputeSkeletonWindow.hpp
src/plugins/ComputeTreeAttributes/: CMakeLists.txt  ComputeTreeAttributesAction.cpp  ComputeTreeAttributesAction.hpp  ComputeTreeAttributesData.hpp  ComputeTreeAttributesLeastSquaredRegression.cpp  ComputeTreeAttributesLeastSquaredRegression.hpp  ComputeTreeAttributesParameters.hpp  ComputeTreeAttributesPlugin.cpp  ComputeTreeAttributesPlugin.hpp  ComputeTreeAttributesRandomizedHoughTransform.cpp  ComputeTreeAttributesRandomizedHoughTransform.hpp  ComputeTreeAttributesWidget.cpp  ComputeTreeAttributesWidget.hpp  ComputeTreeAttributesWindow.cpp  ComputeTreeAttributesWindow.hpp
src/plugins/Edit/: CMakeLists.txt  EditPlugin.cpp  EditPlugin.hpp  EditPluginResetElevation.cpp  EditPluginResetElevation.hpp  EditPluginResetManagementStatus.cpp  EditPluginResetManagementStatus.hpp  EditPluginSetClassification.cpp  EditPluginSetClassification.hpp  EditPluginSetManagementStatus.cpp  EditPluginSetManagementStatus.hpp  EditPluginSetSpecies.cpp  (+1 more)
(+1323 files in other folders)
