# Copyright 2020 VUKOZ
#
# This file is part of 3D Forest.
#
# 3D Forest is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# 3D Forest is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with 3D Forest.  If not, see <https://www.gnu.org/licenses/>.

add_subdirectory(ComputeClassification)
add_subdirectory(ComputeConvexHull)
add_subdirectory(ComputeDescriptor)
add_subdirectory(ComputeElevation)
add_subdirectory(ComputeHeightMap)
add_subdirectory(ComputeSegmentationNN)
add_subdirectory(ComputeTreeAttributes)
add_subdirectory(Edit)
add_subdirectory(ExportFile)
add_subdirectory(FilterArea)
add_subdirectory(FilterClassification)
add_subdirectory(FilterDescriptor)
add_subdirectory(FilterElevation)
add_subdirectory(FilterFiles)
add_subdirectory(FilterIntensity)
add_subdirectory(FilterTrees)
add_subdirectory(ImportFile)
add_subdirectory(MessageLog)
add_subdirectory(ProjectFile)
add_subdirectory(TreeSettings)
add_subdirectory(TreeTable)
add_subdirectory(UnitsSettings)
add_subdirectory(Viewer)
add_subdirectory(ViewSettings)
